My First Baekjoon Online Judge

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -11,51 +11,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 2, 4]\n",
-      "5 3 1 "
+      "[0, 2, 4]\n"
      ]
     }
    ],
    "source": [
-    "s = []\n",
+    "s, s_trace = [], []\n",
     "s.append(0)\n",
     "s.append(2)\n",
     "s.append(4)\n",
     "\n",
+    "s_trace.append(0)\n",
+    "s_trace.append(2)\n",
+    "s_trace.append(4)\n",
+    "\n",
     "print(s)\n",
     "\n",
     "while s:\n",
-    "    print(s.pop()+1, end=' ')"
+    "    x = s.pop() + 1\n",
+    "    s_trace.append(x)\n",
+    "    #print(s.pop()+1, end=' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[0, 2, 4, 5, 3, 1]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "s_trace"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def draw_parenthesis(x):\n",
+    "    if x % 2 == 0:\n",
+    "        return \"(\"\n",
+    "    else: return \")\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['(', '(', '(', ')', ')', ')']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_trace_parenthesis = []\n",
+    "for x in s_trace:\n",
+    "    s_trace_parenthesis.append(draw_parenthesis(x))\n",
+    "    \n",
+    "s_trace_parenthesis"
+   ]
   },
   {
    "cell_type": "code",
