--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -98,10 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    stk = []\n",
+    "    isVPS = True\n",
+    "    \n",
+    "    for ck in input():\n",
+    "        if ck == '(':\n",
+    "            stk.append(ck)\n",
+    "        else:\n",
+    "            stk.pop()\n",
+    "    \n",
+    "    if len(stk) > 0:\n",
+    "        isVPS = False "
+   ]
   },
   {
    "cell_type": "code",
