--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -98,9 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "pop from empty list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_9012.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m         stk\u001b[39m.\u001b[39mappend(ch)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m         stk\u001b[39m.\u001b[39;49mpop()\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#W5sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(stk) \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#W5sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     isVPS \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "\u001b[1;31mIndexError\u001b[0m: pop from empty list"
+     ]
+    }
+   ],
    "source": [
     "T = int(input())\n",
     "\n",
@@ -108,15 +120,22 @@
     "    stk = []\n",
     "    isVPS = True\n",
     "    \n",
-    "    for ck in input():\n",
-    "        if ck == '(':\n",
-    "            stk.append(ck)\n",
+    "    for ch in input():\n",
+    "        if ch == '(':\n",
+    "            stk.append(ch)\n",
     "        else:\n",
     "            stk.pop()\n",
     "    \n",
     "    if len(stk) > 0:\n",
     "        isVPS = False "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
