--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -124,7 +124,11 @@
     "        if ch == '(':\n",
     "            stk.append(ch)\n",
     "        else:\n",
-    "            stk.pop()\n",
+    "            if len(stk) > 0:\n",
+    "                stk.pop()\n",
+    "            else:\n",
+    "                isVPS = False\n",
+    "                break\n",
     "    \n",
     "    if len(stk) > 0:\n",
     "        isVPS = False "
