--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -98,17 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
       "NO\n",
-      "True\n",
-      "YES\n"
+      "NO\n",
+      "YES\n",
+      "NO\n",
+      "YES\n",
+      "NO\n"
      ]
     }
    ],
@@ -132,7 +134,6 @@
     "    if len(stk) > 0:\n",
     "        isVPS = False \n",
     "        \n",
-    "    print(isVPS)\n",
     "    print('YES' if isVPS else 'NO')"
    ]
   },
