--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -135,18 +135,63 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### boj.kr/2164"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
+      "\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "cd_list = [x for x in range(1, N+1)]\n",
+    "print(cd_list)\n",
+    "print()\n",
+    "\n",
+    "while len(cd_list) >= 2:\n",
+    "    cd_list.pop(0)\n",
+    "    x = cd_list.pop(0)\n",
+    "    cd_list.append(x)\n",
+    "    \n",
+    "print(cd_list[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd_list = list(range(1, int(input())+1))\n",
+    "while len(cd_list) >= 2:\n",
+    "    cd_list.pop(0)\n",
+    "    x = cd_list.pop(0)\n",
+    "    cd_list.append(x)\n",
+    "    \n",
+    "print(cd_list[0])"
+   ]
   },
   {
    "cell_type": "code",
