--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -195,10 +195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "cd_list = list(range(1, N+1))\n",
+    "\n",
+    "for _ in range(len(cd_list)):\n",
+    "    if len(cd_list) >= 2:\n",
+    "        cd_list.pop(0)\n",
+    "        x = cd_list.pop(0)\n",
+    "        cd_list.append(x)\n",
+    "print(cd_list[0])    "
+   ]
   }
  ],
  "metadata": {
