--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -213,8 +213,7 @@
     "for _ in range(len(cd_list)):\n",
     "    if len(cd_list) >= 2:\n",
     "        cd_list.pop(0)\n",
-    "        x = cd_list.pop(0)\n",
-    "        cd_list.append(x)\n",
+    "        cd_list.append(cd_list.pop(0))\n",
     "print(cd_list[0])    "
    ]
   }
