--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -216,6 +216,83 @@
     "        cd_list.append(cd_list.pop(0))\n",
     "print(cd_list[0])    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "cd_list = list(range(1, N+1))\n",
+    "\n",
+    "for _ in range(len(cd_list)):\n",
+    "    if len(cd_list) >= 2:\n",
+    "        x = cd_list[1]\n",
+    "        cd_list = cd_list[2:]\n",
+    "        cd_list.append(x)\n",
+    "\n",
+    "print(cd_list[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Queue를 이용해서 푼다!!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13])\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "N = int(input())\n",
+    "q = deque((range(1, N+1)))\n",
+    "print(q)\n",
+    "\n",
+    "while(len(q)>=2):\n",
+    "    x = q[1]\n",
+    "    q.popleft()\n",
+    "    q.popleft()\n",
+    "    q.append(x)\n",
+    "    \n",
+    "print(q[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
