--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -282,10 +282,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "N = int(input())\n",
+    "dq = deque()\n",
+    "\n",
+    "for i in range(1, N+1):\n",
+    "    dq.append(i)\n",
+    "    \n",
+    "while len(dq) >= 2:\n",
+    "    x = dq[1]\n",
+    "    dq.popleft()\n",
+    "    dq.popleft()\n",
+    "    dq.append(x)\n",
+    "    \n",
+    "print(dq[0])    "
+   ]
   },
   {
    "cell_type": "code",
