Using for loop instead of deque(range(1, N+1))

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -219,17 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N = int(input())\n",
     "cd_list = list(range(1, N+1))\n",
@@ -240,7 +232,31 @@
     "        cd_list = cd_list[2:]\n",
     "        cd_list.append(x)\n",
     "\n",
-    "print(cd_list[0])"
+    "print(cd_list[0])     # takes longer than 10 minutes! The worst solution!!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "475712\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "arr = [*range(1, N+1)]\n",
+    "\n",
+    "while len(arr) > 1:\n",
+    "    arr.pop(0)\n",
+    "    arr.append(arr.pop(0))\n",
+    "\n",
+    "print(arr.pop())"
    ]
   },
   {
@@ -282,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "475712\n"
      ]
     }
    ],
@@ -308,7 +324,7 @@
     "    dq.popleft()\n",
     "    dq.append(x)\n",
     "    \n",
-    "print(dq[0])    "
+    "print(dq.popleft())    "
    ]
   },
   {
