Using for loop instead of deque(range(1, N+1))

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -328,6 +328,91 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### boj.kr/11286"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "hq = []\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    x = int(input())\n",
+    "    if x != 0:\n",
+    "        abs_x = abs(x)\n",
+    "        heapq.heappush(hq, abs_x)        \n",
+    "        \n",
+    "    elif len(hq) == 0:\n",
+    "        print(0)\n",
+    "        \n",
+    "    elif x == 0:\n",
+    "        \n",
+    "        print(heapq.heappop(hq)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
