--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -382,14 +382,153 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import heapq\n",
+    "\n",
+    "hq = []\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    x = int(input())\n",
+    "    if x > 0:\n",
+    "        heapq.heappush(hq, x)   \n",
+    "        \n",
+    "    elif x < 0:\n",
+    "        abs_x = abs(x)\n",
+    "        heapq.heappush(hq, abs_x)     \n",
+    "        \n",
+    "    elif len(hq) == 0:\n",
+    "        print(0)\n",
+    "        \n",
+    "    elif x == 0:\n",
+    "        \n",
+    "        print(heapq.heappop(hq)) "
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import heapq\n",
+    "\n",
+    "hq = []\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    x = int(input())\n",
+    "    if x > 0:\n",
+    "        heapq.heappush(hq, x)   \n",
+    "        \n",
+    "    elif x < 0:\n",
+    "        heapq.heappush(hq, -x)     \n",
+    "        \n",
+    "    elif len(hq) == 0:\n",
+    "        print(0)\n",
+    "        \n",
+    "    elif x == 0:\n",
+    "        \n",
+    "        print(heapq.heappop(hq)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_9012.ipynb Cell 20\u001b[0m in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#X24sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m0\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#X24sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39melif\u001b[39;00m x \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#X24sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     \u001b[39mif\u001b[39;00m x_dict[hq[\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mpositive\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#X24sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m         \u001b[39mprint\u001b[39m(heapq\u001b[39m.\u001b[39mheappop(hq)) \n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_9012.ipynb#X24sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[1;31mKeyError\u001b[0m: 1"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "hq = []\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    x = int(input())\n",
+    "    x_dict = {}\n",
+    "    \n",
+    "    if x > 0:\n",
+    "        x_dict[x] = \"positive\"\n",
+    "        heapq.heappush(hq, x)   \n",
+    "        \n",
+    "    elif x < 0:\n",
+    "        x_dict[x] = \"negative\"\n",
+    "        heapq.heappush(hq, -x)     \n",
+    "        \n",
+    "    elif len(hq) == 0:\n",
+    "        print(0)\n",
+    "        \n",
+    "    elif x == 0:\n",
+    "        if x_dict[hq[0]] == \"positive\":\n",
+    "            print(heapq.heappop(hq)) \n",
+    "        else:\n",
+    "            y = -hq[0]\n",
+    "            heapq.heappop(hq)\n",
+    "            print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "0\n",
+      "0\n",
+      "-1\n",
+      "-1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "-2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "N = int(input())\n",
+    "\n",
+    "hq_positive, hq_negative = [], []\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    x = int(input())\n",
+    "    \n",
+    "    if x > 0:\n",
+    "        heapq.heappush(hq_positive, x)\n",
+    "    elif x < 0:\n",
+    "        heapq.heappush(hq_negative, -x)\n",
+    "    elif (len(hq_positive) == 0) | (len(hq_negative) == 0):\n",
+    "        print(0)\n",
+    "    elif (x == 0) & (hq_positive[0] == hq_negative[0]):\n",
+    "        print(-hq_negative[0])\n",
+    "        heapq.heappop(hq_negative)\n",
+    "    elif (x == 0) & (hq_positive[0] > hq_negative[0]):\n",
+    "        print(-hq_negative[0])\n",
+    "        heapq.heappop(hq_negative)\n",
+    "    elif (x == 0) & (hq_positive[0] < hq_negative[0]):\n",
+    "        print(hq_positive[0])     \n",
+    "        heapq.heappop(hq_positive)  "
+   ]
   },
   {
    "cell_type": "code",
