Using for loop instead of deque(range(1, N+1))

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -517,25 +517,39 @@
     "        heapq.heappush(hq_positive, x)\n",
     "    elif x < 0:\n",
     "        heapq.heappush(hq_negative, -x)\n",
-    "    elif (len(hq_positive) == 0) | (len(hq_negative) == 0):\n",
+    "    elif (len(hq_positive) == 0) or (len(hq_negative) == 0):\n",
     "        print(0)\n",
-    "    elif (x == 0) & (hq_positive[0] == hq_negative[0]):\n",
+    "    elif (x == 0) and (hq_positive[0] == hq_negative[0]):\n",
     "        print(-hq_negative[0])\n",
     "        heapq.heappop(hq_negative)\n",
-    "    elif (x == 0) & (hq_positive[0] > hq_negative[0]):\n",
+    "    elif (x == 0) and (hq_positive[0] > hq_negative[0]):\n",
     "        print(-hq_negative[0])\n",
     "        heapq.heappop(hq_negative)\n",
-    "    elif (x == 0) & (hq_positive[0] < hq_negative[0]):\n",
+    "    elif (x == 0) and (hq_positive[0] < hq_negative[0]):\n",
     "        print(hq_positive[0])     \n",
     "        heapq.heappop(hq_positive)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "-x"
+   ]
   },
   {
    "cell_type": "code",
