Using for loop instead of deque(range(1, N+1))

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -515,16 +515,29 @@
     "    \n",
     "    if x > 0:\n",
     "        heapq.heappush(hq_positive, x)\n",
+    "        \n",
     "    elif x < 0:\n",
     "        heapq.heappush(hq_negative, -x)\n",
-    "    elif (len(hq_positive) == 0) or (len(hq_negative) == 0):\n",
+    "        \n",
+    "    elif (len(hq_positive) == 0) and (len(hq_negative) == 0):\n",
     "        print(0)\n",
+    "        \n",
+    "    elif (len(hq_positive) == 0) and (len(hq_negative) > 0) and (x == 0):\n",
+    "        print(-hq_negative[0])\n",
+    "        heapq.heappop(hq_negative)\n",
+    "        \n",
+    "    elif (len(hq_positive) > 0) and (len(hq_negative) == 0) and (x == 0):\n",
+    "        print(hq_positive[0])\n",
+    "        heapq.heappop(hq_positive)\n",
+    "          \n",
     "    elif (x == 0) and (hq_positive[0] == hq_negative[0]):\n",
     "        print(-hq_negative[0])\n",
     "        heapq.heappop(hq_negative)\n",
+    "        \n",
     "    elif (x == 0) and (hq_positive[0] > hq_negative[0]):\n",
     "        print(-hq_negative[0])\n",
     "        heapq.heappop(hq_negative)\n",
+    "        \n",
     "    elif (x == 0) and (hq_positive[0] < hq_negative[0]):\n",
     "        print(hq_positive[0])     \n",
     "        heapq.heappop(hq_positive)  "
