Insert tuples into a priority queue

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -544,11 +544,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### 우선순위큐에 튜플을 넣이보자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, -1), (1, 1), (5, 5), (5, -5), (4, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "N = int(input())\n",
+    "hq = []\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    x = int(input())\n",
+    "    \n",
+    "    if x != 0:\n",
+    "        heapq.heappush(hq, (abs(x), x))\n",
+    "        \n",
+    "print(hq)"
+   ]
   },
   {
    "cell_type": "code",
