Insert tuples into a priority queue

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -579,17 +579,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "heapq.heapify(hq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, -1), (1, 1), (5, 5), (5, -5), (4, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hq)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import heapq as hq\n",
+    "\n",
+    "fast_input = sys.stdin.readline\n",
+    "pq = []\n",
+    "\n",
+    "for _ in range(int(fast_input())):\n",
+    "    x = int(fast_input())\n",
+    "    \n",
+    "    if x:\n",
+    "        hq.heappush(pq, (abs(x), x))\n",
+    "    else:\n",
+    "        print(hq.heappop(pq)[1] if pq else 0)"
+   ]
   }
  ],
  "metadata": {
