Insert tuples into a priority queue

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -623,6 +623,128 @@
     "    else:\n",
     "        print(hq.heappop(pq)[1] if pq else 0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Using min_heap & max_heap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq as hq\n",
+    "import sys\n",
+    "\n",
+    "fast_input = sys.stdin.readline\n",
+    "min_heap, max_heap = [], []\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    x = int(input())\n",
+    "    \n",
+    "    if x:\n",
+    "        if x > 0: \n",
+    "            hq.heappush(min_heap, x)\n",
+    "        else: \n",
+    "            hq.heappush(max_heap, -x)\n",
+    "    \n",
+    "    else:\n",
+    "        if min_heap:\n",
+    "            if max_heap:\n",
+    "                if min_heap[0] < abs(-max_heap[0]):\n",
+    "                    print(hq.heappop(min_heap))\n",
+    "                elif min_heap[0] > abs(-max_heap[0]):\n",
+    "                    print(-hq.heappop(max_heap))\n",
+    "                else:\n",
+    "                    print(-hq.heappop(max_heap))\n",
+    "        \n",
+    "        else:\n",
+    "            if max_heap:\n",
+    "                print(-hq.heappop(max_heap))\n",
+    "            else:\n",
+    "                print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
