Using min_hq & max_hq

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -633,23 +633,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\n",
-      "-1\n",
-      "-1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "-2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import heapq as hq\n",
     "import sys\n",
@@ -657,8 +643,8 @@
     "fast_input = sys.stdin.readline\n",
     "min_heap, max_heap = [], []\n",
     "\n",
-    "for _ in range(int(input())):\n",
-    "    x = int(input())\n",
+    "for _ in range(int(fast_input())):\n",
+    "    x = int(fast_input())\n",
     "    \n",
     "    if x:\n",
     "        if x > 0: \n",
@@ -675,6 +661,8 @@
     "                    print(-hq.heappop(max_heap))\n",
     "                else:\n",
     "                    print(-hq.heappop(max_heap))\n",
+    "            else:\n",
+    "                print(hq.heappop(min_heap))\n",
     "        \n",
     "        else:\n",
     "            if max_heap:\n",
@@ -685,17 +673,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "-1\n",
+      "1\n",
+      "1\n",
+      "-2\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import heapq as hq\n",
+    "\n",
+    "min_hq, max_hq = [], []\n",
+    "fast_input = sys.stdin.readline\n",
+    "\n",
+    "for _ in range(int(fast_input())):\n",
+    "    x = int(fast_input())\n",
+    "    \n",
+    "    if x:\n",
+    "        if x > 0:\n",
+    "            hq.heappush(min_hq, x)\n",
+    "        elif x < 0:\n",
+    "            hq.heappush(max_hq, -x)        \n",
+    "        \n",
+    "    else:\n",
+    "        if min_hq:\n",
+    "            if max_hq:                \n",
+    "                if min_hq[0] < max_hq[0]:\n",
+    "                    print(hq.heappop(min_hq))\n",
+    "                elif min_hq[0] > max_hq[0]:\n",
+    "                    print(-hq.heappop(max_hq))\n",
+    "                else:\n",
+    "                    print(-hq.heappop(max_hq))                    \n",
+    "            else:\n",
+    "                print(hq.heappop(min_hq))\n",
+    "        else:\n",
+    "            if max_hq:\n",
+    "                print(-hq.heappop(max_hq))\n",
+    "            else:\n",
+    "                print(0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 2]\n",
+      "[1, 3, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "18 1 -1 0 0 0 1 1 -1 -1 2 -2 0 0 0 0 0 0 0\n",
+    "\n",
+    "-1\n",
+    "1\n",
+    "0\n",
+    "-1\n",
+    "-1\n",
+    "1\n",
+    "1\n",
+    "-2\n",
+    "2\n",
+    "0"
+   ]
   },
   {
    "cell_type": "code",
