Using min_hq & max_hq

--- a/boj_9012.ipynb
+++ b/boj_9012.ipynb
@@ -741,10 +741,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "\n",
+    "temp = sys.stdin.readline()\n",
+    "print(temp) # \"Hello, World!\\n\""
+   ]
   },
   {
    "cell_type": "code",
