--- a/boj_1302.ipynb
+++ b/boj_1302.ipynb
@@ -56,6 +56,104 @@
     "new_book_dict = sorted(book_dict.items(), key=lambda x : x[1], reverse=True)\n",
     "print(new_book_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'icecream': 2, 'peanuts': 2, 'chocolate': 2, 'candy': 1, 'apple': 1}\n",
+      "[('icecream', 2), ('peanuts', 2), ('chocolate', 2), ('candy', 1), ('apple', 1)]\n",
+      "icecream\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_dict = {}\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    name = input()\n",
+    "    if name not in book_dict.keys():\n",
+    "        book_dict[name] = 1\n",
+    "    else:\n",
+    "        book_dict[name] += 1\n",
+    "        \n",
+    "print(book_dict)\n",
+    "\n",
+    "sorted_book_count = sorted(book_dict.items(), key=lambda x : x[1], reverse=True)\n",
+    "sorted_book_name = sorted(sorted_book_count, key=lambda x : x[0])\n",
+    "print(sorted_book_name)\n",
+    "print(sorted_book_name[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'icecream': 2, 'peanuts': 2, 'chocolate': 2, 'candy': 1, 'apple': 1}\n",
+      "[('apple', 1), ('candy', 1), ('chocolate', 2), ('icecream', 2), ('peanuts', 2)]\n",
+      "apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_dict = {}\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    name = input()\n",
+    "    if name not in book_dict.keys():\n",
+    "        book_dict[name] = 1\n",
+    "    else:\n",
+    "        book_dict[name] += 1\n",
+    "        \n",
+    "print(book_dict)\n",
+    "\n",
+    "sorted_book_count = sorted(book_dict.items(), key=lambda x : x[1], reverse=True)\n",
+    "sorted_book_name = sorted(sorted_book_count, key=lambda x : x[0])\n",
+    "print(sorted_book_name)\n",
+    "print(sorted_book_name[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'icecream': 2, 'peanuts': 2, 'chocolate': 2, 'candy': 1, 'apple': 1}\n",
+      "[('peanuts', 2), ('icecream', 2), ('chocolate', 2), ('candy', 1), ('apple', 1)]\n",
+      "peanuts\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_dict = {}\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    name = input()\n",
+    "    if name not in book_dict.keys():\n",
+    "        book_dict[name] = 1\n",
+    "    else:\n",
+    "        book_dict[name] += 1\n",
+    "        \n",
+    "print(book_dict)\n",
+    "\n",
+    "new_book_dict = sorted(book_dict.items(), key=lambda x : (x[1], x[0]), reverse=True)\n",
+    "print(new_book_dict)\n",
+    "print(new_book_dict[0][0])"
+   ]
   }
  ],
  "metadata": {
