--- a/boj_1302.ipynb
+++ b/boj_1302.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +187,8 @@
      "output_type": "stream",
      "text": [
       "{'icecream': 2, 'peanuts': 2, 'chocolate': 2, 'candy': 1, 'apple': 1}\n",
-      "[('apple', 1), ('candy', 1), ('chocolate', 2), ('icecream', 2), ('peanuts', 2)]\n",
-      "apple\n"
+      "[('icecream', 2), ('peanuts', 2), ('chocolate', 2), ('candy', 1), ('apple', 1)]\n",
+      "icecream\n"
      ]
     }
    ],
@@ -204,7 +204,51 @@
     "        \n",
     "print(book_dict)\n",
     "\n",
-    "sorted_book_count_name = sorted(book_dict.items(), key=lambda x : (x[1], x[0].lower()))\n",
+    "sorted_book_count_name = sorted(book_dict.items(), key=lambda x : x[1], reverse=True)\n",
+    "sorted_book_count_name = sorted(sorted_book_count_name, key=lambda x : x[0],reverse=False)\n",
+    "\n",
+    "print(sorted_book_count_name)\n",
+    "print(sorted_book_count_name[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'icecream': 2, 'peanuts': 2, 'chocolate': 2, 'candy': 1, 'apple': 1}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "an integer is required (got type tuple)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\boj_1302.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m         book_dict[name] \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(book_dict)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m sorted_book_count_name \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39;49m(book_dict\u001b[39m.\u001b[39;49mitems(), key\u001b[39m=\u001b[39;49m\u001b[39mlambda\u001b[39;49;00m x : (x[\u001b[39m1\u001b[39;49m], x[\u001b[39m0\u001b[39;49m]), reverse\u001b[39m=\u001b[39;49m(\u001b[39mTrue\u001b[39;49;00m, \u001b[39mFalse\u001b[39;49;00m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(sorted_book_count_name)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/boj_1302.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mprint\u001b[39m(sorted_book_count_name[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: an integer is required (got type tuple)"
+     ]
+    }
+   ],
+   "source": [
+    "book_dict = {}\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    name = input()\n",
+    "    if name not in book_dict.keys():\n",
+    "        book_dict[name] = 1\n",
+    "    else:\n",
+    "        book_dict[name] += 1\n",
+    "        \n",
+    "print(book_dict)\n",
+    "\n",
+    "sorted_book_count_name = sorted(book_dict.items(), key=lambda x : (x[1], x[0]), reverse=(True, False))\n",
+    "\n",
     "print(sorted_book_count_name)\n",
     "print(sorted_book_count_name[0][0])"
    ]
