Trying to finish sorted()

--- a/boj_1302.ipynb
+++ b/boj_1302.ipynb
@@ -278,13 +278,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('candy', 1), ('apple', 1), ('icecream', 2), ('peanuts', 2), ('chocolate', 2)]\n",
+      "[('peanuts', 2), ('icecream', 2), ('chocolate', 2), ('candy', 1), ('apple', 1)]\n",
+      "\n",
+      "[('apple', 1), ('candy', 1), ('chocolate', 2), ('icecream', 2), ('peanuts', 2)]\n",
+      "[('chocolate', 2), ('icecream', 2), ('peanuts', 2), ('apple', 1), ('candy', 1)]\n"
+     ]
+    }
+   ],
    "source": [
     "book_dict = {}\n",
     "\n",
-    "for _ in "
+    "for _ in range(int(input())):\n",
+    "    name = input()\n",
+    "    \n",
+    "    if name not in book_dict.keys():\n",
+    "        book_dict[name] = 1\n",
+    "    else:\n",
+    "        book_dict[name] += 1\n",
+    "        \n",
+    "# name은 내림차순, count는 오름차순\n",
+    "sorted_book_count = sorted(book_dict.items(), key = lambda x : x[1])\n",
+    "print(sorted_book_count)\n",
+    "\n",
+    "sorted_book_name_count = sorted(sorted_book_count, key = lambda x : x[0], reverse=True)\n",
+    "print(sorted_book_name_count)\n",
+    "print()\n",
+    "\n",
+    "# count는 내림차순, name은 오름차순\n",
+    "sorted_book_name = sorted(book_dict.items(), key = lambda x : x[0])\n",
+    "print(sorted_book_name)\n",
+    "\n",
+    "sorted_book_count_name = sorted(sorted_book_name, key = lambda x : x[1], reverse=True)\n",
+    "print(sorted_book_count_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('apple', 1), ('icecream', 2), ('peanuts', 2), ('chocolate', 2), ('candy', 3)]\n",
+      "[('peanuts', 2), ('icecream', 2), ('chocolate', 2), ('candy', 3), ('apple', 1)]\n",
+      "\n",
+      "[('apple', 1), ('candy', 3), ('chocolate', 2), ('icecream', 2), ('peanuts', 2)]\n",
+      "[('candy', 3), ('chocolate', 2), ('icecream', 2), ('peanuts', 2), ('apple', 1)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "book_dict = {}\n",
+    "\n",
+    "for _ in range(int(input())):\n",
+    "    name = input()\n",
+    "    \n",
+    "    if name not in book_dict.keys():\n",
+    "        book_dict[name] = 1\n",
+    "    else:\n",
+    "        book_dict[name] += 1\n",
+    "        \n",
+    "# name은 내림차순, count는 오름차순\n",
+    "sorted_book_count = sorted(book_dict.items(), key = lambda x : x[1])\n",
+    "print(sorted_book_count)\n",
+    "\n",
+    "sorted_book_name_count = sorted(sorted_book_count, key = lambda x : x[0], reverse=True)\n",
+    "print(sorted_book_name_count)\n",
+    "print()\n",
+    "\n",
+    "# count는 내림차순, name은 오름차순\n",
+    "sorted_book_name = sorted(book_dict.items(), key = lambda x : x[0])\n",
+    "print(sorted_book_name)\n",
+    "\n",
+    "sorted_book_count_name = sorted(sorted_book_name, key = lambda x : x[1], reverse=True)\n",
+    "print(sorted_book_count_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10, 1), (5, 2), (5, 3), (10, 99)]\n",
+      "[(10, 1), (10, 99), (5, 2), (5, 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "votes = [(5,3),(5,2),(10,99),(10,1)]\n",
+    "\n",
+    "votes_1 = sorted(votes, key = lambda x : x[1])\n",
+    "print(votes_1)\n",
+    "\n",
+    "votes_2 = sorted(votes_1, key = lambda x : x[0], reverse=True)\n",
+    "print(votes_2)"
    ]
   }
  ],
