--- a/boj_2039.ipynb
+++ b/boj_2039.ipynb
@@ -28,7 +28,32 @@
     "true_dwarfs = []\n",
     "for i in combinations(dwarfs, 7):\n",
     "    if sum(i) == 100:\n",
-    "        true_dwarfs.append(i.sort())"
+    "        true_dwarfs.append(i.sort())\n",
+    "        \n",
+    "print(true_dwarfs[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.stdin = open(\"data/boj_2309.txt\", \"r\")\n",
+    "dwarfs = []\n",
+    "\n",
+    "for _ in range(9):\n",
+    "    x = int(sys.stdin.readline())\n",
+    "    dwarfs.append(x)\n",
+    "    \n",
+    "print(dwarfs)\n",
+    "\n",
+    "true_dwarfs = []\n",
+    "for i in combinations(dwarfs, 7):\n",
+    "    if sum(i) == 100:\n",
+    "        true_dwarfs.append(i.sort())\n",
+    "        \n",
+    "print(true_dwarfs[0])"
    ]
   }
  ],
