--- a/boj_2039.ipynb
+++ b/boj_2039.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,14 @@
      "output_type": "stream",
      "text": [
       "[20, 7, 23, 19, 10, 15, 25, 8, 13]\n",
-      "[7, 8, 10, 13, 19, 20, 23]\n"
+      "[7, 8, 10, 13, 19, 20, 23]\n",
+      "7\n",
+      "8\n",
+      "10\n",
+      "13\n",
+      "19\n",
+      "20\n",
+      "23\n"
      ]
     }
    ],
@@ -64,7 +71,11 @@
     "        i_list.sort()\n",
     "        true_dwarfs.append(i_list)\n",
     "        \n",
-    "print(true_dwarfs[0])"
+    "print(true_dwarfs[0])\n",
+    "print()\n",
+    "\n",
+    "for i in true_dwarfs[0]:\n",
+    "    print(i)"
    ]
   },
   {
