--- a/boj_2039.ipynb
+++ b/boj_2039.ipynb
@@ -28,9 +28,15 @@
     "true_dwarfs = []\n",
     "for i in combinations(dwarfs, 7):\n",
     "    if sum(i) == 100:\n",
-    "        true_dwarfs.append(i.sort())\n",
+    "        i_list = list(i)\n",
+    "        i_list.sort()\n",
+    "        true_dwarfs.append(i_list)\n",
     "        \n",
-    "print(true_dwarfs[0])"
+    "print(true_dwarfs[0])\n",
+    "print()\n",
+    "\n",
+    "for i in true_dwarfs[0]:\n",
+    "    print(i)"
    ]
   },
   {
